tools/tests/errors/surf_lib_05.experr
invalid regex
missing ) in pattern
